<resources>
    <string name="app_name">Her</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="hint_verification_code">Enter the verification code</string>
    <string name="auto_verify">We will auto verify the code or you can manually</string>
    <string name="start_phone_auth">Signup</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Emergency Channel</string>
    <string name="sms_permission_rationale">SMS permission is needed to send SMS to family and friends</string>
    <string name="location_permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="sos_mode_on">SOS MODE ON</string>
    <string name="sos_mode_no_protectors">There are no protectors around you at the moment.\nWe are actively searching for someone to notify.\nIn the meantime get to a safe location.</string>
    <string name="sos_mode_protectors_notified"> PROTECTORS have been notified.\nThey will reach you shortly.\nDon\'t panic. Move to a safe location.</string>
    <string name="safe_places_mode_on">SHOWING SAFE PLACES</string>
    <string name="safe_places_mode_message">Don\'t panic.\nMove to one of the indicated safe locations.</string>
    <string name="rescue_mode_on">RESCUE MODE ON</string>
    <string name="rescue_mode_message">Someone is in danger! Follow the displayed path to rescue them.</string>
    <string name="emergency_over">The person cancelled the help request. You can still go to their last known location to check on them.</string>
    <string name="cancel_emergency">Are you out of danger?</string>
    <string name="ten_seconds">10 secs</string>
    <string name="one_minute">1 min</string>
    <string name="five_minutes">5 mins</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="info_button">GUIDE</string>
    <string name="tips_button">SAFETY TIPS</string>
    <string name="fake_call_button">FAKE CALL</string>
    <string name="family_button">FAMILY</string>
    <string name="safe_places_buttons">SAFE PLACES</string>
    <string name="terms_of_use_title">TERMS OF USE – HER MOBILE APPLICATION</string>
</resources>